<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/appBackgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/headerTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/spotify_streamer_button"
        style="@style/buttonBackgroundColor"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:onClick="spotifyStreamerButtonClick"
        android:text="@string/spotify_streamer_button_text" />

    <Button
        android:id="@+id/scores_app_button"
        style="@style/buttonBackgroundColor"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:onClick="scoresAppButtonClick"
        android:text="@string/scores_app_button_text" />

    <Button
        android:id="@+id/library_app_button"
        style="@style/buttonBackgroundColor"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:onClick="libraryAppButtonClick"
        android:text="@string/library_app_button_text" />

    <Button
        android:id="@+id/build_bigger_button"
        style="@style/buttonBackgroundColor"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:onClick="buildBiggerButtonClick"
        android:text="@string/build_bigger_button_text" />

    <Button
        android:id="@+id/xyz_reader_button"
        style="@style/buttonBackgroundColor"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:onClick="xyzReaderButtonClick"
        android:text="@string/xyz_reader_button_text" />

    <Button
        android:id="@+id/capstone_my_own_app_button"
        style="@style/capstonebuttonBackgroundColor"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:onClick="capstoneButtonClick"
        android:text="@string/capstone_my_own_app_button_text" />


</LinearLayout>
